[package]
name = "t7_tool_ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.53"
better-panic = "0.3.0"
log = "0.4.14"
simplelog = "0.11.2"
winapi = "0.3.9"
