[package]
name = "t7_tool_ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc-print = "0.1.17"
windows-sys = {version = "0.30.0", features = [
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Foundation",
]}

[profile.release]
debug = true

[profile.release-minsize]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"